src/main/java/parser/SmartMLParser.java
// Generated from C:/Users/Tudor/Documents/SmartJML/src/main/antlr/SmartML.g4 by ANTLR 4.13.2

    package parser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SmartMLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		RETURN=1, RETURNS=2, VIEW=3, PURE=4, CONTRACT=5, FUN=6, FIELD=7, INT=8, 
		BOOL=9, ADDRESS=10, STRING=11, WHILE=12, TRUE=13, FALSE=14, ASSERT=15, 
		REVERT=16, DATATYPE=17, INTERFACE=18, STORAGE=19, IMPLEMENTS=20, ADT_FUNCTION=21, 
		DEFAULT=22, CONSTRUCTOR=23, SAFE=24, INIT=25, TRY=26, CATCH=27, ABORT=28, 
		SUCCESS=29, COMMIT=30, SWITCH=31, CASE=32, IF=33, IN=34, THEN=35, ELSE=36, 
		LET=37, EXCEPTION=38, RESOURCE=39, NEW=40, THIS=41, USES=42, PLUS=43, 
		MINUS=44, TIMES=45, DIV=46, PAR=47, LPAR=48, RPAR=49, SLPAR=50, SRPAR=51, 
		CLPAR=52, CRPAR=53, COMMA=54, COLON=55, DOUBLE_COLON=56, SEMIC=57, QM=58, 
		DOLLAR=59, LEQ=60, GEQ=61, LE=62, GE=63, OR=64, AND=65, NOT=66, EQ=67, 
		NEQ=68, ASM=69, ASSIGN=70, UNDERSCORE=71, OUT=72, DOT=73, WS=74, EOL_COMMENT=75, 
		COMMENTS=76, LINECOMMENTS=77, BLOCKCOMMENTS=78, SINGLE_STRING=79, DOUBLE_STRING=80, 
		INTEGER=81, LITERALS=82, ID=83;
	public static final int
		RULE_program = 0, RULE_datatypeDec = 1, RULE_dataTypeConstr = 2, RULE_adtFunctionDec = 3, 
		RULE_adtStatBlock = 4, RULE_adtExpression = 5, RULE_dataTypeCall = 6, 
		RULE_ifExpression = 7, RULE_adtCall = 8, RULE_switchExpr = 9, RULE_caseExpr = 10, 
		RULE_adtAssign = 11, RULE_exceptionDec = 12, RULE_resourceDec = 13, RULE_interfaceDec = 14, 
		RULE_contractDec = 15, RULE_body = 16, RULE_constructor = 17, RULE_typeParams = 18, 
		RULE_field = 19, RULE_functionDec = 20, RULE_function = 21, RULE_funType = 22, 
		RULE_statement = 23, RULE_ifStatement = 24, RULE_exprStat = 25, RULE_loop = 26, 
		RULE_assign = 27, RULE_funCall = 28, RULE_internalCall = 29, RULE_externalCall = 30, 
		RULE_assertError = 31, RULE_letExpr = 32, RULE_transaction = 33, RULE_returnStat = 34, 
		RULE_tryStatement = 35, RULE_statBlock = 36, RULE_resources = 37, RULE_params = 38, 
		RULE_expr = 39, RULE_term = 40, RULE_factor = 41, RULE_value = 42, RULE_resourceAccess = 43, 
		RULE_newVal = 44, RULE_thisVal = 45, RULE_vardec = 46, RULE_qualifiedAccess = 47, 
		RULE_adtFunCall = 48, RULE_id = 49, RULE_returnType = 50, RULE_type = 51, 
		RULE_bool = 52, RULE_string = 53, RULE_address = 54;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "datatypeDec", "dataTypeConstr", "adtFunctionDec", "adtStatBlock", 
			"adtExpression", "dataTypeCall", "ifExpression", "adtCall", "switchExpr", 
			"caseExpr", "adtAssign", "exceptionDec", "resourceDec", "interfaceDec", 
			"contractDec", "body", "constructor", "typeParams", "field", "functionDec", 
			"function", "funType", "statement", "ifStatement", "exprStat", "loop", 
			"assign", "funCall", "internalCall", "externalCall", "assertError", "letExpr", 
			"transaction", "returnStat", "tryStatement", "statBlock", "resources", 
			"params", "expr", "term", "factor", "value", "resourceAccess", "newVal", 
			"thisVal", "vardec", "qualifiedAccess", "adtFunCall", "id", "returnType", 
			"type", "bool", "string", "address"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'return'", "'returns'", "'view'", "'pure'", "'contract'", "'function'", 
			"'field'", "'int'", "'bool'", "'Address'", "'string'", "'while'", "'true'", 
			"'false'", "'assert'", "'revert'", "'datatype'", "'interface'", "'storage'", 
			"'implements'", "'adt_function'", "'default'", "'constructor'", "'safe'", 
			"'init'", "'try'", "'catch'", "'abort'", "'success'", "'commit'", "'switch'", 
			"'case'", "'if'", "'in'", "'then'", "'else'", "'let'", "'exception'", 
			"'resource'", "'new'", "'this'", "'uses'", "'+'", "'-'", "'*'", "'/'", 
			"'|'", "'('", "')'", "'['", "']'", "'{'", "'}'", "','", "':'", "'::'", 
			"';'", "'\"'", "'$'", "'<='", "'>='", "'<'", "'>'", "'||'", "'&&'", "'!'", 
			"'=='", "'!='", "'='", "':='", "'_'", "'?'", "'.'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "RETURN", "RETURNS", "VIEW", "PURE", "CONTRACT", "FUN", "FIELD", 
			"INT", "BOOL", "ADDRESS", "STRING", "WHILE", "TRUE", "FALSE", "ASSERT", 
			"REVERT", "DATATYPE", "INTERFACE", "STORAGE", "IMPLEMENTS", "ADT_FUNCTION", 
			"DEFAULT", "CONSTRUCTOR", "SAFE", "INIT", "TRY", "CATCH", "ABORT", "SUCCESS", 
			"COMMIT", "SWITCH", "CASE", "IF", "IN", "THEN", "ELSE", "LET", "EXCEPTION", 
			"RESOURCE", "NEW", "THIS", "USES", "PLUS", "MINUS", "TIMES", "DIV", "PAR", 
			"LPAR", "RPAR", "SLPAR", "SRPAR", "CLPAR", "CRPAR", "COMMA", "COLON", 
			"DOUBLE_COLON", "SEMIC", "QM", "DOLLAR", "LEQ", "GEQ", "LE", "GE", "OR", 
			"AND", "NOT", "EQ", "NEQ", "ASM", "ASSIGN", "UNDERSCORE", "OUT", "DOT", 
			"WS", "EOL_COMMENT", "COMMENTS", "LINECOMMENTS", "BLOCKCOMMENTS", "SINGLE_STRING", 
			"DOUBLE_STRING", "INTEGER", "LITERALS", "ID"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SmartML.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SmartMLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public List<DatatypeDecContext> datatypeDec() {
			return getRuleContexts(DatatypeDecContext.class);
		}
		public DatatypeDecContext datatypeDec(int i) {
			return getRuleContext(DatatypeDecContext.class,i);
		}
		public List<ExceptionDecContext> exceptionDec() {
			return getRuleContexts(ExceptionDecContext.class);
		}
		public ExceptionDecContext exceptionDec(int i) {
			return getRuleContext(ExceptionDecContext.class,i);
		}
		public List<ResourceDecContext> resourceDec() {
			return getRuleContexts(ResourceDecContext.class);
		}
		public ResourceDecContext resourceDec(int i) {
			return getRuleContext(ResourceDecContext.class,i);
		}
		public List<InterfaceDecContext> interfaceDec() {
			return getRuleContexts(InterfaceDecContext.class);
		}
		public InterfaceDecContext interfaceDec(int i) {
			return getRuleContext(InterfaceDecContext.class,i);
		}
		public List<ContractDecContext> contractDec() {
			return getRuleContexts(ContractDecContext.class);
		}
		public ContractDecContext contractDec(int i) {
			return getRuleContext(ContractDecContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 824633851904L) != 0)) {
				{
				setState(113);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case DATATYPE:
					{
					setState(110);
					datatypeDec();
					}
					break;
				case EXCEPTION:
					{
					setState(111);
					exceptionDec();
					}
					break;
				case RESOURCE:
					{
					setState(112);
					resourceDec();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(121);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==INTERFACE) {
				{
				{
				setState(118);
				interfaceDec();
				}
				}
				setState(123);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(124);
				contractDec();
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==CONTRACT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DatatypeDecContext extends ParserRuleContext {
		public TerminalNode DATATYPE() { return getToken(SmartMLParser.DATATYPE, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode CLPAR() { return getToken(SmartMLParser.CLPAR, 0); }
		public DataTypeConstrContext dataTypeConstr() {
			return getRuleContext(DataTypeConstrContext.class,0);
		}
		public TerminalNode CRPAR() { return getToken(SmartMLParser.CRPAR, 0); }
		public List<AdtFunctionDecContext> adtFunctionDec() {
			return getRuleContexts(AdtFunctionDecContext.class);
		}
		public AdtFunctionDecContext adtFunctionDec(int i) {
			return getRuleContext(AdtFunctionDecContext.class,i);
		}
		public DatatypeDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_datatypeDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitDatatypeDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DatatypeDecContext datatypeDec() throws RecognitionException {
		DatatypeDecContext _localctx = new DatatypeDecContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_datatypeDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(DATATYPE);
			setState(130);
			id();
			setState(131);
			match(CLPAR);
			setState(132);
			dataTypeConstr();
			setState(136);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 274877910784L) != 0) || _la==ID) {
				{
				{
				setState(133);
				adtFunctionDec();
				}
				}
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(139);
			match(CRPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeConstrContext extends ParserRuleContext {
		public TerminalNode CONSTRUCTOR() { return getToken(SmartMLParser.CONSTRUCTOR, 0); }
		public TerminalNode CLPAR() { return getToken(SmartMLParser.CLPAR, 0); }
		public TerminalNode CRPAR() { return getToken(SmartMLParser.CRPAR, 0); }
		public List<TypeParamsContext> typeParams() {
			return getRuleContexts(TypeParamsContext.class);
		}
		public TypeParamsContext typeParams(int i) {
			return getRuleContext(TypeParamsContext.class,i);
		}
		public List<TerminalNode> PAR() { return getTokens(SmartMLParser.PAR); }
		public TerminalNode PAR(int i) {
			return getToken(SmartMLParser.PAR, i);
		}
		public DataTypeConstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataTypeConstr; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitDataTypeConstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataTypeConstrContext dataTypeConstr() throws RecognitionException {
		DataTypeConstrContext _localctx = new DataTypeConstrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dataTypeConstr);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(CONSTRUCTOR);
			setState(142);
			match(CLPAR);
			setState(151);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(143);
				typeParams();
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==PAR) {
					{
					{
					setState(144);
					match(PAR);
					setState(145);
					typeParams();
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(153);
			match(CRPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdtFunctionDecContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public TerminalNode LPAR() { return getToken(SmartMLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(SmartMLParser.RPAR, 0); }
		public AdtStatBlockContext adtStatBlock() {
			return getRuleContext(AdtStatBlockContext.class,0);
		}
		public List<VardecContext> vardec() {
			return getRuleContexts(VardecContext.class);
		}
		public VardecContext vardec(int i) {
			return getRuleContext(VardecContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SmartMLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SmartMLParser.COMMA, i);
		}
		public AdtFunctionDecContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adtFunctionDec; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitAdtFunctionDec(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdtFunctionDecContext adtFunctionDec() throws RecognitionException {
		AdtFunctionDecContext _localctx = new AdtFunctionDecContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_adtFunctionDec);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(155);
			type();
			setState(156);
			id();
			setState(157);
			match(LPAR);
			setState(166);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 2473901690624L) != 0) || _la==ID) {
				{
				setState(158);
				vardec();
				setState(163);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(159);
					match(COMMA);
					setState(160);
					vardec();
					}
					}
					setState(165);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(168);
			match(RPAR);
			setState(169);
			adtStatBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdtStatBlockContext extends ParserRuleContext {
		public TerminalNode CLPAR() { return getToken(SmartMLParser.CLPAR, 0); }
		public TerminalNode CRPAR() { return getToken(SmartMLParser.CRPAR, 0); }
		public List<AdtExpressionContext> adtExpression() {
			return getRuleContexts(AdtExpressionContext.class);
		}
		public AdtExpressionContext adtExpression(int i) {
			return getRuleContext(AdtExpressionContext.class,i);
		}
		public AdtStatBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adtStatBlock; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitAdtStatBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdtStatBlockContext adtStatBlock() throws RecognitionException {
		AdtStatBlockContext _localctx = new AdtStatBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_adtStatBlock);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(171);
			match(CLPAR);
			setState(175);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 302651313516290L) != 0) || ((((_la - 66)) & ~0x3f) == 0 && ((1L << (_la - 66)) & 188417L) != 0)) {
				{
				{
				setState(172);
				adtExpression();
				}
				}
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(178);
			match(CRPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdtExpressionContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(SmartMLParser.RETURN, 0); }
		public TerminalNode SEMIC() { return getToken(SmartMLParser.SEMIC, 0); }
		public SwitchExprContext switchExpr() {
			return getRuleContext(SwitchExprContext.class,0);
		}
		public IfExpressionContext ifExpression() {
			return getRuleContext(IfExpressionContext.class,0);
		}
		public AdtCallContext adtCall() {
			return getRuleContext(AdtCallContext.class,0);
		}
		public AdtAssignContext adtAssign() {
			return getRuleContext(AdtAssignContext.class,0);
		}
		public AdtExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adtExpression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitAdtExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdtExpressionContext adtExpression() throws RecognitionException {
		AdtExpressionContext _localctx = new AdtExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_adtExpression);
		int _la;
		try {
			setState(202);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RETURN) {
					{
					setState(180);
					match(RETURN);
					}
				}

				setState(183);
				expr();
				setState(185);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(184);
					match(SEMIC);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RETURN) {
					{
					setState(187);
					match(RETURN);
					}
				}

				setState(190);
				switchExpr();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(191);
				ifExpression();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(193);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==RETURN) {
					{
					setState(192);
					match(RETURN);
					}
				}

				setState(195);
				adtCall();
				setState(197);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					setState(196);
					match(SEMIC);
					}
					break;
				}
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(199);
				adtAssign();
				setState(200);
				match(SEMIC);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DataTypeCallContext extends ParserRuleContext {
		public IdContext funName;
		public TerminalNode LPAR() { return getToken(SmartMLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(SmartMLParser.RPAR, 0); }
		public IdContext id() {
			return getRuleContext(IdContext.class,0);
		}
		public List<VardecContext> vardec() {
			return getRuleContexts(VardecContext.class);
		}
		public VardecContext vardec(int i) {
			return getRuleContext(VardecContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(SmartMLParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SmartMLParser.COMMA, i);
		}
		public DataTypeCallContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataTypeCall; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SmartMLVisitor ) return ((SmartMLVisitor<? extends T>)visitor).visitDataTypeCall(this);
			else return visitor.visitChildren(this);
		}
	}
